Added 'world' generation. Save/load is VERY slow